--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
     "@tanstack/react-query": "^4.29.0",
     "zustand": "^4.4.0",
     "lucide-react": "^0.263.0",
-    "tailwindcss": "^3.3.0",
+    "tailwindcss": "^3.3.0"
+  },
+  "devDependencies": {
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
     "typescript": "^5.0.0",
@@ -35,9 +37,5 @@
     "@typescript-eslint/eslint-plugin": "^5.57.0",
     "@typescript-eslint/parser": "^5.57.0",
     "react-native": "^0.72.0"
-  },
-  "devDependencies": {
-    "@vitejs/plugin-react": "^4.0.0",
-    "vite": "^4.3.0"
   }
 }
